# R2D2

./: .gitattributes  README.md  requirements.txt
assets/raw/: earth.usd  ladder_metallic_tool.glb  nasa_astronaut_helmet.glb  sat02_body_satellite.usd  sci-fi_space_station.glb  sci-fi_space_station.usd  space_hdri1.exr  space_satellite.glb  wall-e.glb  wall-e.usd
assets/usd/: Meteor-M2_No.usd  Meteor-M2_No.usdz  R2D2.usd  Star_Wars_-_R2D2.usdz  debris_helmet.usd  debris_solar_panel.usd  space_station.usd
assets/usd/R2D2_usdz_unpacked/: scene.usdc
assets/usd/Satellite_lnb_Building_roof_top_usdz_unpacked/: scene.usdc
lidar_debug/: cad_points.npy  target_cloud_world.ply
mission_interfaces/: CMakeLists.txt  package.xml
mission_interfaces/action/: MissionControl.action
resources/assets/raw/: earth.glb  meteorite.glb  meteorite.usd  nasa_astronaut_helmet.usd  (+8 more)
resources/datasets/: keypoints_3d.json
resources/m0609_aruco_detect/: m0609_rg2_description.yaml  viewer_process.py  wrist_camera.py
resources/outputs/: space_environment_v15_satellite_meteor_axis_only.usda
resources/robots/: doosan_loader.py  m0609_chaser_space.urdf  m0609_rg2_space.urdf  m0609_rg2_space.usd
scripts/: __init__.py  adr_integrated.py  adr_integrated_OLD_doosanchaser.py.bak  adr_perception.py  iss_berthing.py  iss_berthing_final.py  m0609_rg2_description.yaml  m0609_rmpflow_common.yaml  mission_controller.py  run_debug.py  space_environment_v10_leo.py  v5b_yolo_viewer.py
scripts/backup/: adr_integrated_backup.py  iss_berthing_backup.py  mission_controller_backup.py
(+20 files in other folders)
